--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 footer {
   max-width: 850px;
   font-family: Inter, sans-serif;
@@ -84,9 +93,12 @@ input {
   margin-top: 85px;
 }
 
-.peopl {
+.peopls {
   margin-bottom: 69px;
   margin-top: 26px;
+}
+
+.peopl {
   margin-left: 20px;
   width: 72px;
   height: 72px;
