--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import "css/reset.css";
 @import "css/common.css";
 @import "faq.css";
-
+@import "leaders.css";
 footer {
   font-family: Inter, sans-serif;
   text-align: center;
